WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26039
[GTK] WebKitWebHistoryItem lifetime fixes
https://bugs.webkit.org/show_bug.cgi?id=26039
Summary
[GTK] WebKitWebHistoryItem lifetime fixes
Xan Lopez
Reported
2009-05-27 00:50:10 PDT
As discussed on IRC the lifetime management of the history items has some problems right now. The attached patches give the details.
Attachments
history1.patch
(2.43 KB, patch)
2009-05-27 00:51 PDT
,
Xan Lopez
jmalonzo
: review+
Details
Formatted Diff
Diff
history2.patch
(16.31 KB, patch)
2009-05-27 00:52 PDT
,
Xan Lopez
no flags
Details
Formatted Diff
Diff
history2.patch
(16.31 KB, patch)
2009-05-27 00:53 PDT
,
Xan Lopez
no flags
Details
Formatted Diff
Diff
history3.patch
(11.96 KB, patch)
2009-05-27 16:16 PDT
,
Xan Lopez
gustavo
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Xan Lopez
Comment 1
2009-05-27 00:51:43 PDT
Created
attachment 30698
[details]
history1.patch Delete backforward list before page on the webview.
Xan Lopez
Comment 2
2009-05-27 00:52:19 PDT
Created
attachment 30699
[details]
history2.patch Modify management of history items.
Xan Lopez
Comment 3
2009-05-27 00:53:19 PDT
Created
attachment 30700
[details]
history2.patch Modify management of history items.
Jan Alonzo
Comment 4
2009-05-27 03:37:43 PDT
Comment on
attachment 30698
[details]
history1.patch r=me.
Jan Alonzo
Comment 5
2009-05-27 03:56:58 PDT
(In reply to
comment #2
)
> Created an attachment (id=30699) [review] > history2.patch > > Modify management of history items. >
The original intention, and why the table is maintained by WebKitWebHistoryItem, was to share the history item between a WebBackForwardList and a *future* WebHistory. It's also the reason why I hesitated to make WebBackForwardList the sole owner of history items (i.e. the hash table maintained by back forward list). But since I don't see WebHistory coming anytime soon, perhaps we can make the WebBackForwardList the owner of history items for now and figure this out once we have a WebHistory? Will that fix this issue?
Xan Lopez
Comment 6
2009-05-27 16:16:12 PDT
Created
attachment 30719
[details]
history3.patch A slightly less intrusive approach.
Gustavo Noronha (kov)
Comment 7
2009-05-27 16:28:48 PDT
Comment on
attachment 30719
[details]
history3.patch
> + GObjectClass *object_class = G_OBJECT_CLASS(klass);
The only problem I could fine is this misplaced * =P
Xan Lopez
Comment 8
2009-05-28 07:54:02 PDT
Landed both patches as 44227 and 44228. Closing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug