2009-05-26  Xan Lopez  <xlopez@igalia.com>

Reviewed by Jan Alonzo.

        https://bugs.webkit.org/show_bug.cgi?id=26039
        [GTK] WebKitWebHistoryItem lifetime fixes

        Delete the BackForwardList before the Page, otherwise the references
        to the WebKitWebHistoryItems will be gone.

        * webkit/webkitwebview.cpp:
        (webkit_web_view_dispose):

Canonical link: https://commits.webkit.org/36074@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44227 268f45cc-cd09-0410-ab3c-d52691b4dbfc